Added seperate databse for user and community member

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -3,27 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SignUp</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <title>Centered Buttons</title>
+    <link rel="stylesheet" href="/css/loginstyle.css">
 </head>
 <body>
-    <div class="login-container">
-        <div class="login-box">
-            <img src="/css/logo.png" width="70px" height="70px">
-            <h2>Sign Up</h2>
-            <form action="/signup" method="post"> 
-                <div class="textbox">
-                    <input type="text" placeholder="User Name" name="username" required>
-                </div>
-                <div class="textbox">
-                    <input type="password" placeholder="Password" name="password" required>
-                </div>
-                <div class="textbox">
-                    <input type="text" placeholder="email" name="email" required>
-                </div>
-                <button type="submit" class="btn">SignUP</button>
-            </form>
-        </div>
+	<div class="login-container">
+        
+	<div class="login-box">
+	<img src="/css/logo.png" width="50px" height="50px" >
+        <h2 style="text-align:center" >SignUp</h2>
+    <div class="center-container">
+        <a href="usersignup"><button class="btn" >User</button></a>
+        <a href="communitysignup"><button class="btn">community<br>member</button></a>
+    </div>
+    </div>
     </div>
 </body>
 </html>
+
