--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,31 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <title>Centered Buttons</title>
+    <link rel="stylesheet" href="/css/loginstyle.css">
 </head>
 <body>
-    <div class="login-container">
-        <div class="login-box">
-            <img src="/css/logo.png" width="70px" height="70px">
-            <h2>Login</h2>
-            <form action="/login" method="post">
-                <div class="textbox">
-                    <input type="text" placeholder="User Name" name="username" required>
-                </div>
-                <div class="textbox">
-                    <input type="password" placeholder="Password" name="password" required>
-                </div>
-                <div class="remember-forget">
-                    <label>
-                        <input type="checkbox" name="remember"> Remember Me
-                    </label>
-                    <a href="#">Forget Me?</a>
-                </div>
-                <p>Don't have an account?&nbsp;&nbsp;<a href="signup">signup</a></p>
-                <button type="submit" class="btn">Login</button>
-            </form>
-        </div>
+	<div class="login-container">
+        
+	<div class="login-box">
+	<img src="/css/logo.png" width="50px" height="50px" >
+        <h2 style="text-align:center" >Login</h2>
+    <div class="center-container">
+        <a href="userlogin"><button class="btn" >User</button></a>
+        <a href="communitylogin"><button class="btn">community<br>member</button></a>
+    </div>
+    </div>
     </div>
 </body>
 </html>
+
